--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "sass": "^1.50.0",
     "sass-loader": "^12.6.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3",
-    "@quarter/simple-ui": "^0.0.2-alpha"
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
