--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
+    "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "sass": "^1.50.0",
     "sass-loader": "^12.6.0",
