--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@amap/amap-jsapi-loader": "^1.0.1",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.0",
     "sass": "^1.50.0",
     "sass-loader": "^12.6.0",
     "vue": "^3.2.13",
@@ -45,5 +46,17 @@
     "last 2 versions",
     "not dead",
     "not ie 11"
-  ]
+  ],
+  "description": "```\r yarn install\r ```",
+  "main": "babel.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Anonymous-CZ/vue-study.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Anonymous-CZ/vue-study/issues"
+  },
+  "homepage": "https://github.com/Anonymous-CZ/vue-study#readme"
 }
