--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
+    "@vue/reactivity": "^3.3.4",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "echarts": "^5.4.0",
